src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_int64__impl.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Int64,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Int64,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastInt64ToInt32(
            CastInt64ToInt32,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
